fix quality card height on safari

--- a/src/components/Quality/Quality.scss
+++ b/src/components/Quality/Quality.scss
@@ -12,7 +12,8 @@
     }
     @media(min-width: $breakpoint-desktop) {
         flex-direction: column;
-        height: 202px;
+        //height: 202px;
+        height: 412px;
         &:not(:first-child) {
             margin-left: 30px;
         }
@@ -43,7 +44,7 @@
                 padding-bottom: 24px;
             }
             @media(min-width: $breakpoint-desktop) {
-                padding: 49px 0;
+                padding: 30px 0;
             }
         }
         &__description {
